[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snackoracle"       # must be unique on PyPI
version = "0.1.0"
description = "A fun Python package to predict snack vibes"
readme = "README.md"
authors = [{name="Abir Mahmood", email="abirmahmood6@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"